--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Order summary card</title>
+  <link rel="stylesheet" href="css/index.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,19 +16,30 @@
   </style>
 </head>
 <body>
+  <div class="flex">
+    <main>
+      <img src="images/illustration-hero.svg" alt="ilistration-hero">
 
-  Order Summary
+      <h2>Order Summary</h2>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+      <p class="parrafo">
+        You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
+      </p>
 
-  Annual Plan
-  $59.99/year
+      <div class="alerta">
+        <img src="images/icon-music.svg" alt="icon-music">
 
-  Change
+        <p>
+          <span>Annual Plan</span> <br>$59.99/year
+        </p>
 
-  Proceed to Payment
-  Cancel Order
+        <a href="#">Change</a>
+      </div>
+
+      <button class="btn btnPago">Proceed to Payment</button>
+      <button class="btn btnCancelar">Cancel Order</button>
+    </main>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
