--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="flex">
     <main>
-      <img src="images/illustration-hero.svg" alt="ilistration-hero">
+      <img class="img" src="images/illustration-hero.svg" alt="ilistration-hero">
 
       <h2>Order Summary</h2>
 
@@ -43,7 +43,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/jyokarianlia/order_sumary" target="_blank">jyokarianlia</a>.
   </div>
 </body>
 </html>
